src/styles.css
/* ... */
.mainWrapper {
    display: flex;
    flex-direction: column;
    height: 100vh;
}
body {
    font-size: 16px;
    font-weight: 300;
    color: #01214a;
    text-align: left;
    font-family: 'Poppins', sans-serif;
    min-height: 100%;
}
@media (max-width:1400px) and (min-width:1300px) and (min-height:900px) {
    body {
        font-size: 11.485px
    }
}
@media (max-width:1025px) {
    body {
        font-size: 12px;
        overflow-x: hidden
    }
}
@media (max-width:767px) {
    body {
        font-size: 14px
    }
}

@media (max-width:767px) {
    h1 {
        font-size: 2.5em
    }
}
h2 {
    font-size: 3.2em;
    line-height: 1.1;
    text-transform: capitalize;
    color: #fff;
    font-weight: 600;
}
h3 {
    font-size: 1.875em;
    /* text-transform: capitalize; */
    color: #fff;
    font-weight: 600;
}
@media (max-width:767px) {
    h3 {
        font-size: 1.25em
    }
}
h4 {
    font-size: 1.5625em
}
.open-menu body {
    overflow: hidden
}
.loadjs {
    overflow: hidden
}
img {
    width: 100%;
    height: auto
}
ul {
    padding: 0;
    margin: 0;
    display: flex;
    list-style-type: none
}
.sec__header h2 {
    margin-bottom: .35em
}
.container {
    max-width: 100%;
    height: 100%;
    padding: 0 30px;
}
p{
    font-size: 1.125em;
    color: #fff;
    line-height: 2em;
}
@media (min-width:767px) {
    .container {
        padding: 0 3em
    }
}
@media (min-width:992px) {
    .container {
        padding: 0 5em
    }
}
@media (min-width:1200px) {
    .container {
        padding: 0 10%;
    }
}
.block, .section {
    position: relative;
    padding: 7em 0;
    overflow: hidden
}
@media (max-width:767px) {
    .block, .section {
        padding: 3em 0
    }
}
input[type=number] {
    -moz-appearance: textfield
}
input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none
}
.form-control:focus {
    outline: 0;
    box-shadow: none
}
a:hover {
    text-decoration: none
}

button {
    -webkit-appearance: button;
    width: auto;
    border: 0;
    box-shadow: none;
    background: 0 0;
    outline: 0;
    background: 0 0;
    border-radius: 0;
    cursor: pointer
}
button:focus {
    outline: 0
}
@media (max-width:767px) {
    .btn__anchor {
        font-size: .9em;
        cursor: pointer;
    }
}
.btn__anchor:hover {
    /*color: #fff;
    background: #E34F43;*/
}
.toogle-wrap {
    display: none
}
.toggle-menu {
    display: table;
    font-size: 1em;
    position: relative;
    width: 4.375em;
    height: 1.375em;
    padding: .5em .875em .5em 1.25em;
    border-radius: 50%;
    transform: rotate(0);
    transition: .5s ease-in-out;
    margin-left: 1.25em;
    cursor: pointer;
    z-index: 20
}
.toggle-menu a {
    position: relative;
    display: block;
    width: 1.625em;
    height: 1.625em;
    transition: .5s
}
.toggle-menu a span {
    display: block;
    position: absolute;
    height: 2px;
    width: 100%;
    background: #fff;
    opacity: 1;
    left: 0;
    transform: rotate(0);
    transition: .3s
}
.toggle-menu a span:nth-child(1) {
    top: 25%
}
.toggle-menu a span:nth-child(2), .toggle-menu a span:nth-child(3) {
    top: 50%
}
.toggle-menu a span:nth-child(4) {
    top: 75%
}
.toggle-menu a:hover span {
    background: #fff
}
.toggle-menu.open {
    z-index: 999;
}
.toggle-menu.open a {
    transform: rotate(180deg)
}
.toggle-menu.open a span:nth-child(1), .toggle-menu.open a span:nth-child(4) {
    width: 50%;
    opacity: 0
}
.toggle-menu.open a span:nth-child(3) {
    opacity: 1;
    transform: rotate(-45deg)
}
.toggle-menu.open a span:nth-child(2) {
    transform: rotate(45deg)
}
.toggle-menu.open span:nth-child(1) {
    top: 1em;
    width: 0%;
    left: 50%
}
.toggle-menu.open span:nth-child(2) {
    transform: rotate(45deg)
}
.toggle-menu.open span:nth-child(3) {
    transform: rotate(-45deg)
}
.toggle-menu.open span:nth-child(4) {
    top: 1em;
    width: 0;
    left: 50%
}
header.border-div {
    position: fixed;
}
.buy__head__button{
    display: flex;
    align-items: center;
}
/*header:after {
    content: "";
    position: absolute;
    left: 0;
    width: 100%;
    top: -100%;
    background: #000;
    height: 100%;
    z-index: -1;
    transition: .4s
}*/
header.active {
    padding: 1em 0
}
header.active .brand-logo {
    width: 4.3125em;
    height: auto;
    transition: .5s;
}
header.active:after {
    top: 0
}

@media (max-width:767px) {
    header {
        display: flex;
        align-items: center
    }
}
.navigation ul a {
    transition: .4s;
    font-size: 1.15em;
}
@media (max-width:767px) {
    .navigation ul a {
        transition: none
    }
}
.navigation ul a:hover {
    transition: .1s;
    color: #E34F43;
}
@media (max-width:767px) {
    .cta {
        margin-right: -2em;
        cursor: pointer;
    }
}
@media (max-width:767px) {
    .navigation {
        width: 100%;
        position: fixed;
        height: 100vh;
        left: -100%;
        top: 0;
        background: #023C93;
        padding: 14em 0;
        z-index: 99;
        /*visibility: hidden;*/
        /*opacity: 0;*/
        transition: .7s
    }
    .navigation.active {
        /*visibility: visible;*/
        /*opacity: 1*/
        left: 0;
    }
}
.navigation ul {
    padding: 0;
    margin: 0;
    list-style-type: none;
    display: flex;
}
.navigation ul a.active {
    /* color: #fa9450 */
}
@media (max-width: 767px) {
    .buy__head__button {
        display: block;
        align-items: center;
        }
        .buy__head__btn {
            margin:50px auto;
        }
}
/* ... */

